# qingstor-sdk-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE1  LICENSE2  NOTICE.txt  README.md  code_generate.sh
.github/workflows/: build.yml
CMake/: FindCurl.cmake  FindOpenSSL.cmake  Options.cmake
docs/: configuration.md  installation.md  sdk_c_style_usage.md  sdk_cpp_style_usage.md
include/: Bucket.h  HttpCommon.h  QsBaseType.h  QsErrors.h  QsSdkOption.h  Types.h
include/qingstor/: Bucket.h  QingStor.h  QsConfig.h  QsErrors.h  QsSdkOption.h  StringUtils.h  Types.h
include/qingstor/service_with_c_style/: QingStorCStyle.h  Types.h
include/qingstor/service_with_c_style/types/: ACLType.h  AbortIncompleteMultipartUploadType.h  BucketType.h  CORSRuleType.h  CloudfuncArgsType.h  ConditionType.h  ExpirationType.h  FilterType.h  GranteeType.h  IPAddressType.h  IsNullType.h  KeyDeleteErrorType.h  KeyType.h  NotIPAddressType.h  NotificationType.h  ObjectPartType.h  OwnerType.h  RuleType.h  StatementType.h  StringLikeType.h  StringNotLikeType.h  TransitionType.h  UploadsType.h
include/qingstor/types/: AbortIncompleteMultipartUploadType.h  BucketType.h  CORSRuleType.h  CloudfuncArgsType.h  ExpirationType.h  FilterType.h  GranteeType.h  IPAddressType.h  KeyDeleteErrorType.h  KeyType.h  NotificationType.h  ObjectPartType.h  RuleType.h  StatementType.h  TransitionType.h  UploadsType.h
include/service_with_c_style/: QsList.h
include/service_with_c_style/types/: ACLType.h  BucketType.h  IPAddressType.h  KeyDeleteErrorType.h  KeyType.h  ObjectPartType.h  StringLikeType.h  StringNotLikeType.h
include/types/: ACLType.h  ConditionType.h  IsNullType.h  KeyDeleteErrorType.h  KeyType.h  NotIPAddressType.h  ObjectPartType.h  OwnerType.h  StringLikeType.h  StringNotLikeType.h
samples/samples_sdk_c/: CMakeLists.txt  main.c
samples/samples_sdk_cpp/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  QsSdkOption.h.in
src/config/: QsConfig.cpp
src/http/: CurlHandlerPool.cpp  HttpClient.cpp  HttpCommon.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpURI.cpp
src/include/http/: CurlHandlerPool.h  HttpClient.h  HttpRequest.h  HttpResponse.h  HttpURI.h
src/include/request/: QsRequest.h  QsRequestBuilder.h  QsResponseUnparker.h
src/include/signer/: QsSigner.h
src/include/utils/: OpensslAuth.h  QsAlloc.h  QsEncoder.h  QsStream.h
src/request/: QsRequest.cpp
src/service/: Bucket.cpp  QingStor.cpp  Types.cpp
src/service/service_with_c_style/: QingStorCStyle.cpp  Types.cpp
src/signer/: QsSigner.cpp
src/utils/: OpensslAuth.cpp  QsEncoder.cpp  StringUtils.cpp
template/header/: service.tmpl  shared.tmpl  sub_service.tmpl  types.tmpl  types_cpp.tmpl
template/header_with_c_style/: manifest.json  service.tmpl  shared.tmpl  types.tmpl  types_cpp.tmpl
template/source/: service.tmpl  shared.tmpl  sub_service.tmpl  types.tmpl
template/source_with_c_style/: manifest.json  service.tmpl  shared.tmpl  types.tmpl
test/: CMakeLists.txt
test/CMake/: FindGMock.cmake  FindValgrind.cmake
test/c_style_tests/: CMakeLists.txt  CTestBucket.cpp  CTestBucketACL.cpp  CTestBucketCORS.cpp  CTestBucketExternalMirror.cpp  CTestBucketPolicy.cpp  CTestImage.cpp  CTestObject.cpp  CTestObjectMultipart.cpp  CTestService.cpp  RunTestCStyleAPI.cpp
test/cpp_style_tests/: CMakeLists.txt  CppTestBucket.cpp  CppTestBucketACL.cpp  CppTestBucketCORS.cpp  CppTestBucketExternalMirror.cpp  CppTestBucketPolicy.cpp  CppTestImage.cpp  CppTestObject.cpp  CppTestObjectMultipart.cpp  CppTestService.cpp  RunTestCppStyleAPI.cpp
